# supabase_auth_rs

./: Cargo.toml  README.md
src/: delete_user.rs  error.rs  get_user.rs  lib.rs  logout.rs  refresh_token.rs  signup.rs  util.rs
src/models/: token.rs  user.rs
