[package]
name = "supabase-auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
thiserror = "1.0.63"
postgrest = "1.6.0"
log = "0.4.22"
reqwest = { version = "0.11.27", features = ["json"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde"] }
anyhow = "1.0.86"
serde_json = "1.0.124"
time = { version = "0.3.36", features = ["parsing", "serde", "formatting"] }
kinded = { version = "0.3.0" }
